# prost_t2_classification

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: run_full_pipeline.ps1  run_light_pipeline.ps1
src/prost_t2_classification/: __init__.py  cli.py  dataset.py  download.py  image_ops.py  labels.py  logging_utils.py  models.py  preprocess.py  train.py
tests/: test_image_ops.py  test_labels.py  test_light_pipeline.py  test_models.py  test_train.py
