[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prost-t2-classification"
version = "0.1.0"
description = "T2-only fastMRI prostate coil-selection and real-vs-complex classification pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Meisam Ashraf" }
]
dependencies = [
  "fastmri-tools>=0.1.0",
  "h5py>=3.8",
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "torch>=2.0",
  "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
prost-t2 = "prost_t2_classification.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
